<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userName"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName" />

    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/userName"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:text="@string/remember_me" />

    <Spinner
        android:id="@+id/SizeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rememberMeCheckBox"
        android:layout_alignStart="@id/userName"
        android:layout_alignEnd="@id/userName" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/SizeSpinner"
        android:layout_alignStart="@id/userName"
        android:layout_alignEnd="@id/password"
        android:onClick="onStartSteam"
        android:text="@string/start" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonStart"
        android:layout_alignStart="@id/userName"
        android:layout_alignEnd="@id/password"
        android:onClick="onStartAbout"
        android:text="@string/aboutTitle" />

    <Button
        android:id="@+id/buttonNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonAbout"
        android:layout_alignStart="@id/userName"
        android:layout_alignEnd="@id/password"
        android:onClick="onCreateUser"
        android:text="@string/new_user" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageView"
        app:srcCompat="@drawable/splash" />

</RelativeLayout>